[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "videohub-python"
version = "1.2.4"
description = "Official VideoHub Python SDK for building video, audio, and screen sharing applications."
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [
  {name="Letscms", email="support@videohub.dev"}
]

keywords = [
  "videohub",
  "video sdk",
  "webrtc",
  "video calling",
  "audio rooms",
  "screen sharing",
  "pk battle",
  "attachment",
]

dependencies = [
  "httpx>=0.25"
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",

  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Internet",
]

[project.urls]
Homepage = "https://videohub.dev"
Documentation = "https://docs.videohub.dev"
Repository = "https://github.com/letscms/videohub-python"
Issues = "https://github.com/letscms/videohub-python/issues"


[tool.setuptools.packages.find]
where = ["."]
include = ["videohub*"]